--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "app-router-dart",
   "version": "0.0.1",
-  "homepage": "https://github.com/mattjonesorg/app-router-dart",
+  "homepage": "https://github.com/mattjonesorg/google-map-dart",
   "authors": [
     "Matt Jones <github@mattjones.org>"
   ],
   "dependencies": {
     "polymer": "polymer/polymer#0.4.1",
-    "app-router": "app-router#0.9.0"
+    "google-map": "google-map#0.3.1"
   },
   "license": "MIT",
   "ignore": [
