--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,12 @@ dependencies:
   custom_element_apigen: ">= 0.0.2 <0.1.0"
   polymer: ">=0.14.0 <0.16.0"
   web_components: ">=0.7.0 <0.8.0"
+  google_apis_dart:
+    git: https://github.com/mattjonesorg/google-apis-dart.git
 dev_dependencies:
   unittest: ">=0.11.0+2 <0.12.0"
 environment:
   sdk: '>=1.6.0 <2.0.0'
 transformers:
 - polymer:
-
     lint: false
