--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-router-dart",
-  "version": "0.0.1",
+  "name": "google-map-dart",
+  "version": "0.0.3",
   "homepage": "https://github.com/mattjonesorg/google-map-dart",
   "authors": [
     "Matt Jones <github@mattjones.org>"
