--- a/google-map-dart.yaml
+++ b/google-map-dart.yaml
@@ -6,12 +6,11 @@ files_to_generate:
   - google-map/google-map.html
   - google-map/google-map-search.html
   - google-map/google-map-directions.html
-stubs_to_generate:
-#  google_apis_dart:
-#    - google-apis/google-apis.html
+
 deletion_patterns:
   - metadata\.html$
   - index\.html$
   - bower\.json$
-  - ^google-apis
   - ^core-
+  - ^platform$
+  - ^polymer$
